--- a/ratings.html
+++ b/ratings.html
@@ -13,6 +13,7 @@
     <main>
         <div class="container">
             <h1 id="рейтинги" class="page-title">Турнирная таблица</h1>
+            <p id="lastUpdate"></p>
             <div id="tournamentInfo"></div>
             <div id="levelButtons"></div>
             <div id="levelHeader"></div>
