--- a/znatoki.html
+++ b/znatoki.html
@@ -26,6 +26,7 @@
     <footer id="footer"></footer>
 
     <script src="js/main.js"></script>
+    <script src="js/common.js"></script>
     <script src="js/znatoki.js"></script>
 </body>
 </html>
