--- a/tournaments/tournament.html
+++ b/tournaments/tournament.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Турнир #1 | IQ Capitalist</title>
+    <title>Турнир №1 | IQ Capitalist</title>
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="css/tournament.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
@@ -14,39 +14,40 @@
     <main>
         <div class="container">
             <div class="tournament-header">
-                <h1 class="page-title">Турнир #1</h1>
-                <a href="index.html" class="btn btn-primary">К списку турниров</a>
+                <h1 class="page-title">Турнир №1</h1>
             </div>
 
             <div class="tournament-info">
-                <div class="info-item">
-                    <span class="label">Период проведения:</span>
-                    <span class="value" id="tournament-dates">25-27 марта 2025 года</span>
-                </div>
-                <div class="info-item">
-                    <span class="label">Всего вопросов:</span>
-                    <span class="value" id="total-questions">80</span>
-                </div>
-                <div class="info-item">
-                    <span class="label">Участников:</span>
-                    <span class="value" id="total-players">94</span>
-                </div>
-                <div class="info-item">
-                    <span class="label">Призовой фонд:</span>
-                    <span class="value" id="prize-pool">6995 IQC</span>
-                </div>
+                <table class="info-table">
+                    <tr>
+                        <td class="info-label">Период проведения</td>
+                        <td class="info-value" id="tournament-dates">25-27 марта 2025 года</td>
+                    </tr>
+                    <tr>
+                        <td class="info-label">Всего вопросов</td>
+                        <td class="info-value" id="total-questions">80</td>
+                    </tr>
+                    <tr>
+                        <td class="info-label">Участников</td>
+                        <td class="info-value" id="total-players">94</td>
+                    </tr>
+                    <tr>
+                        <td class="info-label">Призовой фонд</td>
+                        <td class="info-value" id="prize-pool">6995 IQC</td>
+                    </tr>
+                </table>
             </div>
 
             <div class="tournament-stats-grid">
                 <div class="stat-card participants-by-level">
-                    <h2>Участники по уровням</h2>
+                    <h2>Участники</h2>
                     <div class="chart-container">
                         <canvas id="levelChart"></canvas>
                     </div>
                 </div>
 
                 <div class="stat-card answers-stats">
-                    <h2>Статистика ответов</h2>
+                    <h2>Ответы</h2>
                     <div class="answers-grid">
                         <div class="answer-type correct">
                             <div class="count" id="correct-answers">2269</div>
@@ -109,7 +110,7 @@
 
     <footer id="footer"></footer>
 
-    <script src="../js/main.js"></script>
+    <script src="/js/main.js"></script>
     <script>
         // Инициализация элементов с анимацией появления
         document.addEventListener('DOMContentLoaded', function() {
