--- a/tournaments/tournament.html
+++ b/tournaments/tournament.html
@@ -1,4 +1,12 @@
-<!DOCTYPE html>
+<style>
+        /* Дополнительные стили, необходимые для корректного отображения */
+        .container {
+            max-width: 900px;
+            padding: 0 15px;
+            margin: 0 auto;
+            box-sizing: border-box;
+        }
+    </style><!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
