--- a/tournaments/tournament.html
+++ b/tournaments/tournament.html
@@ -59,15 +59,15 @@
                     <div class="answers-grid">
                         <div class="answer-type correct">
                             <div class="count" id="correct-answers">2269</div>
-                            <div class="label">Правильных ответов</div>
+                            <div class="label">Правильные</div>
                         </div>
                         <div class="answer-type wrong">
                             <div class="count" id="wrong-answers">1026</div>
-                            <div class="label">Неправильных ответов</div>
+                            <div class="label">Неправильные</div>
                         </div>
                         <div class="answer-type timeout">
                             <div class="count" id="timeouts">95</div>
-                            <div class="label">Таймаутов</div>
+                            <div class="label">Таймауты</div>
                         </div>
                     </div>
                     <div class="chart-container">
