--- a/tournaments/tournament.html
+++ b/tournaments/tournament.html
@@ -1,4 +1,13 @@
-<style>
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Турнир №1 | IQ Capitalist</title>
+    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="css/tournament.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
+    <style>
         /* Дополнительные стили, необходимые для корректного отображения */
         .container {
             max-width: 900px;
@@ -6,15 +15,7 @@
             margin: 0 auto;
             box-sizing: border-box;
         }
-    </style><!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Турнир №1 | IQ Capitalist</title>
-    <link rel="stylesheet" href="../css/styles.css">
-    <link rel="stylesheet" href="css/tournament.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
+    </style>
 </head>
 <body>
     <header id="header"></header>
