--- a/tournaments/tournament.html
+++ b/tournaments/tournament.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Турнир №1 | IQ Capitalist</title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="css/tournament.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
     <style>
@@ -99,7 +99,7 @@
 
     <footer id="footer"></footer>
 
-    <script src="/js/main.js"></script>
+    <script src="../js/main.js"></script>
     <script>
         // Инициализация элементов с анимацией появления
         document.addEventListener('DOMContentLoaded', function() {
