--- a/tournament.html
+++ b/tournament.html
@@ -27,7 +27,7 @@
 
             <div class="tournament-info-container">
                 <div class="info-row">
-                    <div class="info-label">Период проведения</div>
+                    <div class="info-label">Дата</div>
                     <div class="info-value" id="tournament-dates">25-27 марта 2025 года</div>
                 </div>
                 <div class="info-row">
