--- a/tournament.html
+++ b/tournament.html
@@ -27,10 +27,7 @@
 
             <div class="tournament-info-container">
                 <div class="info-row">
-                    <div class="info-label">
-                        <span class="desk-date-label">Дата</span>
-                        <span class="mob-date-label">Дата</span>
-                    </div>
+                    <div class="info-label"><span>Период проведения</span></div>
                     <div class="info-value" id="tournament-dates">25-27 марта 2025 года</div>
                 </div>
                 <div class="info-row">
