--- a/tournament.html
+++ b/tournament.html
@@ -19,7 +19,7 @@
             <!-- Информация о турнире -->
             <div class="tournament-info-container">
                 <div class="info-row">
-                    <div class="info-label"><span>Период проведения</span></div>
+                    <div class="info-label"><span>Дата</span></div>
                     <div class="info-value" id="tournament-dates">Загрузка...</div>
                 </div>
                 <div class="info-row">
