--- a/tournament.html
+++ b/tournament.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/tournament.css">
     <link rel="stylesheet" href="css/tournament_stats.css">
+    <link rel="stylesheet" href="css/combined-tournament.css">
 </head>
 <body>
     <header id="header"></header>
