--- a/tournament.html
+++ b/tournament.html
@@ -22,7 +22,7 @@
             <p id="lastUpdate" class="last-update"></p>
 
             <!-- Информация о турнире -->
-            <div class="tournament-info-container">
+            <div id="tournamentInfo" class="tournament-info-container">
                 <div class="info-row">
                     <div class="info-label"><span>Дата</span></div>
                     <div class="info-value" id="tournament-dates">Загрузка...</div>
