--- a/tournament.html
+++ b/tournament.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Турнир №1 | IQ Capitalist</title>
+    <title>Турнир | IQ Capitalist</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/tournament.css">
     <link rel="stylesheet" href="css/tournament_stats.css">
@@ -15,7 +15,7 @@
     <main>
         <div class="container">
             <div class="tournament-header">
-                <h1 class="page-title">Турнир №1</h1>
+                <h1 class="page-title">Турнир</h1>
             </div>
 
             <!-- Информация о последнем обновлении -->
