--- a/tournament.html
+++ b/tournament.html
@@ -39,6 +39,7 @@
                     <div class="info-label">Призовой фонд</div>
                     <div class="info-value" id="prize-pool">Загрузка...</div>
                 </div>
+                <!-- Строка для скачивания CSV будет добавлена динамически -->
             </div>
 
             <!-- Карточка "Участники по уровням" -->
