--- a/tournament.html
+++ b/tournament.html
@@ -71,7 +71,7 @@
 
             <!-- Карточка "Детальная статистика" -->
             <div class="stat-card detailed-stats">
-                <h2>Детальная статистика по типам ответов</h2>
+                <h2>Типы ответов</h2>
                 <div class="table-responsive">
                     <table class="stats-table">
                         <thead>
