--- a/header.html
+++ b/header.html
@@ -9,6 +9,7 @@
                 <li><a href="rules.html">Правила</a></li>
                 <li><a href="ratings.html">Турнир</a></li>
                 <li><a href="players.html">Игроки</a></li>
+                <li><a href="history.html">Архив</a></li>
             </ul>
         </nav>
     </div>
