--- a/user.html
+++ b/user.html
@@ -64,7 +64,7 @@
 
     <main>
         <div class="container">
-            <h1 id="playerNameTitle" class="page-title">Игрок</h1>
+            <h1 id="playerNameTitle" class="page-title"></h1>
             
             <div id="loadingIndicator" class="loading-indicator">
                 <div class="spinner"></div>
