--- a/rules.html
+++ b/rules.html
@@ -40,7 +40,7 @@
             <ol>
                 <li>Нажми кнопку "Вопрос" в боте <a href="https://t.me/IQC_Game_Bot" target="_blank">@IQC_Game_Bot</a></li>
                 <li>Получишь случайный вопрос с вариантами ответов</li>
-                <li>У тебя есть 2 минуты на выбор правильного ответа</li>
+                <li>У тебя есть 90 секунд на выбор правильного ответа</li>
                 <li>После нажатия кнопки с ответом будет 3 секунды, чтобы отменить выбор</li>
                 <li>После этого ответ фиксируется, и ты получаешь или теряешь очки</li>
             </ol>
@@ -53,9 +53,9 @@
 
             <p>Процент зависит от скорости ответа:</p>
             <ul>
-                <li><strong>Быстрый ответ</strong> (до 40 секунд): очки на 3% от капитала</li>
-                <li><strong>Средний ответ</strong> (40-80 секунд): очки на 2% от капитала</li>
-                <li><strong>Медленный ответ</strong> (более 80 секунд): очки на 1% от капитала</li>
+                <li><strong>Быстрый ответ</strong> (до 20 секунд): очки на 3% от капитала</li>
+                <li><strong>Средний ответ</strong> (21-50 секунд): очки на 2% от капитала</li>
+                <li><strong>Медленный ответ</strong> (51-90 секунд): очки на 1% от капитала</li>
             </ul>
 
             <p>А также:</p>
