--- a/rules.html
+++ b/rules.html
@@ -61,7 +61,7 @@
             <p>А также:</p>
             <ul>
                 <li><strong>Бустеры</strong> удваивают полученные или потерянные очки при ответе</li>
-                <li><strong>Тайм-аут</strong>: если не успел ответить за 2 минуты, очки не начисляются</li>
+                <li><strong>Тайм-аут</strong>: если не успел ответить за 90 секунд, очки не начисляются</li>
             </ul>
 
             <p>В каждом турнире ты можешь ответить максимум на 80 вопросов. Результаты можно посмотреть в разделе "Турнир" в основном боте.</p>
